added demo page for simple checked tree

--- a/t5-tree/src/main/java/de/ahjava/t5tree/components/CheckableTreeNode.tml
+++ b/t5-tree/src/main/java/de/ahjava/t5tree/components/CheckableTreeNode.tml
@@ -8,7 +8,7 @@
         t:id="check" 
         value="checked"
         class="${hierarchyClasses}" 
-        onclick="webbibtree.handleCheckBoxChange(this);${checkboxOnClick};" />
+        onclick="t5tree.handleCheckBoxChange(this);${checkboxOnClick};" />
     </span>
   </t:replace>
       
