--- a/t5-tree-demo/src/main/java/de/ahjava/t5treedemo/components/Layout.tml
+++ b/t5-tree-demo/src/main/java/de/ahjava/t5treedemo/components/Layout.tml
@@ -10,6 +10,7 @@
 		<div class="navbar-collapse">
           <ul class="nav">
             <li><a t:type="pagelink" page="SimpleStaticTree">SimpleStaticTree</a></li>
+            <li><a t:type="pagelink" page="CheckedStaticTree">CheckedStaticTree</a></li>
             <li><a t:type="pagelink" page="FileTree">FileTree</a></li>
           </ul>
         </div>
