added animation support to recursive tree

--- a/t5-tree-demo/src/main/java/de/ahjava/t5treedemo/pages/FileTree.tml
+++ b/t5-tree-demo/src/main/java/de/ahjava/t5treedemo/pages/FileTree.tml
@@ -22,7 +22,7 @@
   <p />
 
   <div class="well">  
-    <tr:tree t:id="tree" model="fileModel" />
+    <tr:tree t:id="tree" model="fileModel" animation="fast" />
   </div>
 </t:Layout>
   
