connected check state across lazy loads

--- a/t5-tree-demo/src/main/java/de/ahjava/t5treedemo/pages/FormFileTree.tml
+++ b/t5-tree-demo/src/main/java/de/ahjava/t5treedemo/pages/FormFileTree.tml
@@ -15,7 +15,7 @@
   <t:zone t:id="zone">
     <t:form zone="zone">
       <div class="well">  
-        <tr:tree t:id="tree" model="fileModel" expansionModel="expansionModel" animation="fast" />
+        <tr:tree t:id="tree" model="fileModel" expansionModel="expansionModel" checkModel="checkModel" animation="fast" />
       </div>
 
       <div>
