checkboxes for leaf nodes

--- a/t5-tree-demo/src/main/java/de/ahjava/t5treedemo/pages/FormFileTree.tml
+++ b/t5-tree-demo/src/main/java/de/ahjava/t5treedemo/pages/FormFileTree.tml
@@ -19,7 +19,7 @@
       </div>
 
       <div>
-    	??? files are selected, having a total size of ??? bytes.
+    	${numSelectedFiles} files are selected, having a total size of ${totalSelectedSize} bytes.
       </div>
     
       <div class="form-actions">
