--- a/t5-tree/src/main/java/de/ahjava/t5tree/components/style/t5tree.css
+++ b/t5-tree/src/main/java/de/ahjava/t5tree/components/style/t5tree.css
@@ -30,6 +30,16 @@
   text-shadow: none;
 }
 
+.tree-icon-empty {
+  display: inline-block;
+  height: 13px;
+  width: 13px;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+  text-shadow: none;
+}
+
 .tree-open-close {
   margin-right: 10px;
   height:13px;
